fix module-info documents