@@ -15,11 +15,10 @@ public class ApplicativeCompilerTest {
 
     @Test
     public void applicativeFapplyRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Applicative",
-                        "src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeMock")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeMock")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -28,11 +27,10 @@ public class ApplicativeCompilerTest {
 
     @Test
     public void applicativeNoPublicClass(){
-        var args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/applicative/NoPublicTypeApplicative")
+        var args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/applicative/NoPublicTypeApplicative")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         var flags = args.toArray(new String[4]);
         var k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -41,11 +39,10 @@ public class ApplicativeCompilerTest {
 
     @Test
     public void applicativeFunctor(){
-        var args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeFunctor")
+        var args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeFunctor")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         var flags = args.toArray(new String[4]);
         var k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -55,11 +52,10 @@ public class ApplicativeCompilerTest {
 
     @Test
     public void applicativeIncomplete(){
-        var args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeOnlyPure")
+        var args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeOnlyPure")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         var flags = args.toArray(new String[4]);
         var k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -68,11 +64,10 @@ public class ApplicativeCompilerTest {
 
     @Test
     public void applicativeLiftA2Run() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Applicative",
-                        "src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeLiftMock")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/applicative/ApplicativeLiftMock")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
