@@ -15,11 +15,10 @@ public class FunctorCompilerTest {
 
     @Test
     public void eitherFunctor(){
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/functor/EitherF")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/EitherF")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -28,11 +27,10 @@ public class FunctorCompilerTest {
     }
     @Test
     public void functorNoPublicFun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/functor/NoPublicMapFunctor")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/NoPublicMapFunctor")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -41,11 +39,10 @@ public class FunctorCompilerTest {
 
     @Test
     public void functorMonad(){
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/functor/FunctorMonad")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/FunctorMonad")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -54,11 +51,10 @@ public class FunctorCompilerTest {
 
     @Test
     public void functorNoPublicClass(){
-        var args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/functor/NoPublicTypeFunctor")
+        var args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/NoPublicTypeFunctor")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         var flags = args.toArray(new String[4]);
         var k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -67,11 +63,10 @@ public class FunctorCompilerTest {
 
     @Test
     public void functorNoStaticRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/functor/NoStaticFunctor")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/NoStaticFunctor")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -80,11 +75,10 @@ public class FunctorCompilerTest {
 
     @Test
     public void functorRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Functor",
-                        "src/test/java/com/dan323/functional/annotation/compiler/functor/FunctorMock")
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/functor/FunctorMock")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
