@@ -14,12 +14,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class MonadCompilerTest {
     @Test
     public void monadFlatMapRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Monad",
-                        "src/test/java/com/dan323/functional/annotation/compiler/monad/MonadFlatMap"
-                )
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/monad/MonadFlatMap")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -28,12 +26,10 @@ public class MonadCompilerTest {
 
     @Test
     public void monadJoinFunctorRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Monad",
-                        "src/test/java/com/dan323/functional/annotation/compiler/monad/MonadJoinFunctor"
-                )
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/monad/MonadJoinFunctor")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -42,12 +38,10 @@ public class MonadCompilerTest {
 
     @Test
     public void monadJoinApplicativeRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Monad",
-                        "src/test/java/com/dan323/functional/annotation/compiler/monad/MonadJoinApplicativeFapply"
-                )
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/monad/MonadJoinApplicativeFapply")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
@@ -56,12 +50,10 @@ public class MonadCompilerTest {
 
     @Test
     public void monadJoinApplicative2Run() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Monad",
-                        "src/test/java/com/dan323/functional/annotation/compiler/monad/MonadJoinApplicativeLift"
-                )
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/monad/MonadJoinApplicativeLift")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
