@@ -14,12 +14,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class SemigroupCompilerTest {
     @Test
     public void semigroupRun() {
-        List<String> args = Stream.of("../annotation-definitions/src/main/java/com/dan323/functional/annotation/Semigroup",
-                        "src/test/java/com/dan323/functional/annotation/compiler/semigroup/SemigroupInteger"
-                )
+        List<String> args = Stream.of("src/test/java/com/dan323/functional/annotation/compiler/semigroup/SemigroupInteger")
                 .map(s -> Paths.get(s + ".java").toAbsolutePath().toString())
                 .collect(Collectors.toList());
-        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName()));
+        args.addAll(0, List.of("-processor", FunctionalCompiler.class.getName(), "-p", "../annotation-definitions/target/annotation-definitions-1.0-SNAPSHOT.jar", "--add-modules", "functional.annotations"));
         String[] flags = args.toArray(new String[4]);
         int k = ToolProvider.getSystemJavaCompiler()
                 .run(System.in, System.out, System.err, flags);
